--- a/notebook_1.ipynb
+++ b/notebook_1.ipynb
@@ -982,26 +982,463 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 68
+          "height": 1000
         },
-        "outputId": "3d8e007a-063a-490b-dfd1-1a7321b3fcb0"
+        "outputId": "99cd020a-2852-4ab6-9d2e-d31bd714fe5f"
       },
       "source": [
         "%%time\n",
         "RunAll(cfg=_CFG)\n",
         "    "
       ],
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "/content/Feynman_with_units/I.34.8\n",
             "Checking for brute force + \n",
-            "\n"
+            "\n",
+            "Checking for brute force * \n",
+            "\n",
+            "Checking polyfit \n",
+            "\n",
+            "Complexity  RMSE  Expression\n",
+            "[17.509775004326936, 0.0, '1.000000000000*(x2*(x1*(x0/x3)))']\n",
+            "Checking for brute force + \n",
+            "\n",
+            "Checking for brute force * \n",
+            "\n",
+            "Checking polyfit \n",
+            "\n",
+            "Complexity  RMSE  Expression\n",
+            "[17.509775004326936, 0.0, '1.000000000000*(x2*(x1*(x0/x3)))']\n",
+            "Checking for brute force + \n",
+            "\n",
+            "Checking for brute force * \n",
+            "\n",
+            "Checking polyfit \n",
+            "\n",
+            "Complexity  RMSE  Expression\n",
+            "[16.194602975157967, nan, 'acos(-x0 - x1 - x2 + 2)']\n",
+            "[17.509775004326936, 0.0, '1.000000000000*(x2*(x1*(x0/x3)))']\n",
+            "Checking for brute force + \n",
+            "\n",
+            "Checking for brute force * \n",
+            "\n",
+            "Checking polyfit \n",
+            "\n",
+            "Complexity  RMSE  Expression\n",
+            "[16.194602975157967, nan, 'acos(-x0 - x1 - x2 + 2)']\n",
+            "[17.509775004326936, 0.0, '1.000000000000*(x2*(x1*(x0/x3)))']\n",
+            "Checking for brute force + \n",
+            "\n",
+            "Checking for brute force * \n",
+            "\n",
+            "Checking polyfit \n",
+            "\n",
+            "Complexity  RMSE  Expression\n",
+            "[16.194602975157967, nan, 'acos(-x0 - x1 - x2 + 2)']\n",
+            "[17.509775004326936, 0.0, '1.000000000000*(x2*(x1*(x0/x3)))']\n",
+            "Checking for brute force + \n",
+            "\n",
+            "Checking for brute force * \n",
+            "\n",
+            "Checking polyfit \n",
+            "\n",
+            "Complexity  RMSE  Expression\n",
+            "[16.194602975157967, nan, 'acos(-x0 - x1 - x2 + 2)']\n",
+            "[17.509775004326936, 0.0, '1.000000000000*(x2*(x1*(x0/x3)))']\n",
+            "Checking for brute force + \n",
+            "\n",
+            "Checking for brute force * \n",
+            "\n",
+            "Checking polyfit \n",
+            "\n",
+            "Complexity  RMSE  Expression\n",
+            "[0.0, 29.021163959047044, 'asin(666.000000000000*(x2-((x2+1)-1)))']\n",
+            "[16.194602975157967, nan, 'acos(-x0 - x1 - x2 + 2)']\n",
+            "[17.509775004326936, 0.0, '1.000000000000*(x2*(x1*(x0/x3)))']\n",
+            "Checking for brute force + \n",
+            "\n",
+            "Checking for brute force * \n",
+            "\n",
+            "Checking polyfit \n",
+            "\n",
+            "Complexity  RMSE  Expression\n",
+            "[0.0, 29.021163959047044, 'asin(666.000000000000*(x2-((x2+1)-1)))']\n",
+            "[16.194602975157967, nan, 'acos(-x0 - x1 - x2 + 2)']\n",
+            "[17.509775004326936, 0.0, '1.000000000000*(x2*(x1*(x0/x3)))']\n",
+            "Checking for brute force + \n",
+            "\n",
+            "Checking for brute force * \n",
+            "\n",
+            "Checking polyfit \n",
+            "\n",
+            "Complexity  RMSE  Expression\n",
+            "[0.0, 29.021163959047044, 'asin(666.000000000000*(x2-((x2+1)-1)))']\n",
+            "[16.194602975157967, nan, 'acos(-x0 - x1 - x2 + 2)']\n",
+            "[17.509775004326936, 0.0, '1.000000000000*(x2*(x1*(x0/x3)))']\n",
+            "Checking for brute force + \n",
+            "\n",
+            "Checking for brute force * \n",
+            "\n",
+            "Checking polyfit \n",
+            "\n",
+            "Complexity  RMSE  Expression\n",
+            "[0.0, 29.021163959047044, 'asin(666.000000000000*(x2-((x2+1)-1)))']\n",
+            "[16.194602975157967, nan, 'acos(-x0 - x1 - x2 + 2)']\n",
+            "[17.509775004326936, 0.0, '1.000000000000*(x2*(x1*(x0/x3)))']\n",
+            "Checking for symmetry \n",
+            " I.34.8_train\n",
+            "Training a NN on the data... \n",
+            "\n",
+            "tensor(0.0918, device='cuda:0', grad_fn=<DivBackward0>)\n",
+            "tensor(0.0656, device='cuda:0', grad_fn=<DivBackward0>)\n",
+            "tensor(0.0516, device='cuda:0', grad_fn=<DivBackward0>)\n",
+            "tensor(0.0221, device='cuda:0', grad_fn=<DivBackward0>)\n",
+            "NN loss:  tensor(0.0038, device='cuda:0', grad_fn=<DivBackward0>) \n",
+            "\n",
+            "Checking for brute force + \n",
+            "\n",
+            "Checking for brute force * \n",
+            "\n",
+            "Checking polyfit \n",
+            "\n",
+            "Complexity  RMSE  Expression\n",
+            "[12.60964047443681, 9.234604872781642e-07, '0.000000000000+(x1*(x0/x2))']\n",
+            "Checking for brute force + \n",
+            "\n",
+            "Checking for brute force * \n",
+            "\n",
+            "Checking polyfit \n",
+            "\n",
+            "Complexity  RMSE  Expression\n",
+            "[12.60964047443681, 9.234604872781642e-07, '0.000000000000+(x1*(x0/x2))']\n",
+            "Checking for brute force + \n",
+            "\n",
+            "Checking for brute force * \n",
+            "\n",
+            "Checking polyfit \n",
+            "\n",
+            "Complexity  RMSE  Expression\n",
+            "[4.0, 32.33086112527217, 'pi/2']\n",
+            "[12.60964047443681, 9.234604872781642e-07, '0.000000000000+(x1*(x0/x2))']\n",
+            "Checking for brute force + \n",
+            "\n",
+            "Checking for brute force * \n",
+            "\n",
+            "Checking polyfit \n",
+            "\n",
+            "Complexity  RMSE  Expression\n",
+            "[4.0, 32.33086112527217, 'pi/2']\n",
+            "[12.60964047443681, 9.234604872781642e-07, '0.000000000000+(x1*(x0/x2))']\n",
+            "Checking for brute force + \n",
+            "\n",
+            "Checking for brute force * \n",
+            "\n",
+            "Checking polyfit \n",
+            "\n",
+            "Complexity  RMSE  Expression\n",
+            "[4.0, 32.33086112527217, 'pi/2']\n",
+            "[12.60964047443681, 9.234604872781642e-07, '0.000000000000+(x1*(x0/x2))']\n",
+            "Checking for brute force + \n",
+            "\n",
+            "Checking for brute force * \n",
+            "\n",
+            "Checking polyfit \n",
+            "\n",
+            "Complexity  RMSE  Expression\n",
+            "[4.0, 32.33086112527217, 'pi/2']\n",
+            "[12.60964047443681, 9.234604872781642e-07, '0.000000000000+(x1*(x0/x2))']\n",
+            "Checking for brute force + \n",
+            "\n",
+            "Checking for brute force * \n",
+            "\n",
+            "Checking polyfit \n",
+            "\n",
+            "Complexity  RMSE  Expression\n",
+            "[4.0, 32.33086112527217, 'pi/2']\n",
+            "[12.60964047443681, 9.234604872781642e-07, '0.000000000000+(x1*(x0/x2))']\n",
+            "Checking for brute force + \n",
+            "\n",
+            "Checking for brute force * \n",
+            "\n",
+            "Checking polyfit \n",
+            "\n",
+            "Complexity  RMSE  Expression\n",
+            "[4.0, 32.33086112527217, 'pi/2']\n",
+            "[12.60964047443681, 9.234604872781642e-07, '0.000000000000+(x1*(x0/x2))']\n",
+            "Checking for brute force + \n",
+            "\n",
+            "Checking for brute force * \n",
+            "\n",
+            "Checking polyfit \n",
+            "\n",
+            "Complexity  RMSE  Expression\n",
+            "[1.0, 32.555376461840865, '1']\n",
+            "[4.0, 32.33086112527217, 'pi/2']\n",
+            "[12.60964047443681, 9.234604872781642e-07, '0.000000000000+(x1*(x0/x2))']\n",
+            "Checking for brute force + \n",
+            "\n",
+            "Checking for brute force * \n",
+            "\n",
+            "Checking polyfit \n",
+            "\n",
+            "Complexity  RMSE  Expression\n",
+            "[1.0, 32.555376461840865, '1']\n",
+            "[4.0, 32.33086112527217, 'pi/2']\n",
+            "[12.60964047443681, 9.234604872781642e-07, '0.000000000000+(x1*(x0/x2))']\n",
+            "Checking for symmetry \n",
+            " I.34.8_train-translated_multiply\n",
+            "Found pretrained NN \n",
+            "\n",
+            "tensor(0.0416, device='cuda:0', grad_fn=<DivBackward0>)\n",
+            "tensor(0.0176, device='cuda:0', grad_fn=<DivBackward0>)\n",
+            "tensor(0.0303, device='cuda:0', grad_fn=<DivBackward0>)\n",
+            "NN loss after training:  tensor(0.0040, device='cuda:0', grad_fn=<DivBackward0>) \n",
+            "\n",
+            "Checking for brute force + \n",
+            "\n",
+            "Checking for brute force * \n",
+            "\n",
+            "Checking polyfit \n",
+            "\n",
+            "Complexity  RMSE  Expression\n",
+            "[5.754887502163468, 9.234604872781642e-07, '0.000000000000+(x0/x1)']\n",
+            "Checking for brute force + \n",
+            "\n",
+            "Checking for brute force * \n",
+            "\n",
+            "Checking polyfit \n",
+            "\n",
+            "Complexity  RMSE  Expression\n",
+            "[5.754887502163468, 9.234604872781642e-07, '0.000000000000+(x0/x1)']\n",
+            "Checking for brute force + \n",
+            "\n",
+            "Checking for brute force * \n",
+            "\n",
+            "Checking polyfit \n",
+            "\n",
+            "Complexity  RMSE  Expression\n",
+            "[4.0, 32.33086112527217, 'pi/2']\n",
+            "[5.754887502163468, 9.234604872781642e-07, '0.000000000000+(x0/x1)']\n",
+            "Checking for brute force + \n",
+            "\n",
+            "Checking for brute force * \n",
+            "\n",
+            "Checking polyfit \n",
+            "\n",
+            "Complexity  RMSE  Expression\n",
+            "[4.0, 32.33086112527217, 'pi/2']\n",
+            "[5.754887502163468, 9.234604872781642e-07, '0.000000000000+(x0/x1)']\n",
+            "Checking for brute force + \n",
+            "\n",
+            "Checking for brute force * \n",
+            "\n",
+            "Checking polyfit \n",
+            "\n",
+            "Complexity  RMSE  Expression\n",
+            "[4.0, 32.33086112527217, 'pi/2']\n",
+            "[5.754887502163468, 9.234604872781642e-07, '0.000000000000+(x0/x1)']\n",
+            "Checking for brute force + \n",
+            "\n",
+            "Checking for brute force * \n",
+            "\n",
+            "Checking polyfit \n",
+            "\n",
+            "Complexity  RMSE  Expression\n",
+            "[4.0, 32.33086112527217, 'pi/2']\n",
+            "[5.754887502163468, 9.234604872781642e-07, '0.000000000000+(x0/x1)']\n",
+            "Checking for brute force + \n",
+            "\n",
+            "Checking for brute force * \n",
+            "\n",
+            "Checking polyfit \n",
+            "\n",
+            "Complexity  RMSE  Expression\n",
+            "[0.0, 32.919359912499495, '0']\n",
+            "[4.0, 32.33086112527217, 'pi/2']\n",
+            "[5.754887502163468, 9.234604872781642e-07, '0.000000000000+(x0/x1)']\n",
+            "Checking for brute force + \n",
+            "\n",
+            "Checking for brute force * \n",
+            "\n",
+            "Checking polyfit \n",
+            "\n",
+            "Complexity  RMSE  Expression\n",
+            "[0.0, 32.919359912499495, '0']\n",
+            "[4.0, 32.33086112527217, 'pi/2']\n",
+            "[5.754887502163468, 9.234604872781642e-07, '0.000000000000+(x0/x1)']\n",
+            "Checking for brute force + \n",
+            "\n",
+            "Checking for brute force * \n",
+            "\n",
+            "Checking polyfit \n",
+            "\n",
+            "Complexity  RMSE  Expression\n",
+            "[0.0, 32.919359912499495, '0']\n",
+            "[1.0, 32.555376461840865, '1']\n",
+            "[4.0, 32.33086112527217, 'pi/2']\n",
+            "[5.754887502163468, 9.234604872781642e-07, '0.000000000000+(x0/x1)']\n",
+            "Checking for brute force + \n",
+            "\n",
+            "Checking for brute force * \n",
+            "\n",
+            "Checking polyfit \n",
+            "\n",
+            "Complexity  RMSE  Expression\n",
+            "[0.0, 32.919359912499495, '0']\n",
+            "[1.0, 32.555376461840865, '1']\n",
+            "[4.0, 32.33086112527217, 'pi/2']\n",
+            "[5.754887502163468, 9.234604872781642e-07, '0.000000000000+(x0/x1)']\n",
+            "Checking for symmetry \n",
+            " I.34.8_train-translated_multiply-translated_multiply\n",
+            "Found pretrained NN \n",
+            "\n",
+            "tensor(0.0311, device='cuda:0', grad_fn=<DivBackward0>)\n",
+            "tensor(0.0333, device='cuda:0', grad_fn=<DivBackward0>)\n",
+            "tensor(0.0225, device='cuda:0', grad_fn=<DivBackward0>)\n",
+            "NN loss after training:  tensor(0.0062, device='cuda:0', grad_fn=<DivBackward0>) \n",
+            "\n",
+            "Checking for brute force + \n",
+            "\n",
+            "Checking for brute force * \n",
+            "\n",
+            "Checking polyfit \n",
+            "\n",
+            "Complexity  RMSE  Expression\n",
+            "[0.0, 9.234604872781642e-07, '0.000000000000+x0']\n",
+            "Checking for brute force + \n",
+            "\n",
+            "Checking for brute force * \n",
+            "\n",
+            "Checking polyfit \n",
+            "\n",
+            "Complexity  RMSE  Expression\n",
+            "[0.0, 9.234604872781642e-07, '0.000000000000+x0']\n",
+            "Checking for brute force + \n",
+            "\n",
+            "Checking for brute force * \n",
+            "\n",
+            "Checking polyfit \n",
+            "\n",
+            "Complexity  RMSE  Expression\n",
+            "[0.0, 9.234604872781642e-07, '0.000000000000+x0']\n",
+            "Checking for brute force + \n",
+            "\n",
+            "Checking for brute force * \n",
+            "\n",
+            "Checking polyfit \n",
+            "\n",
+            "Complexity  RMSE  Expression\n",
+            "[0.0, 9.234604872781642e-07, '0.000000000000+x0']\n",
+            "Checking for brute force + \n",
+            "\n",
+            "Checking for brute force * \n",
+            "\n",
+            "Checking polyfit \n",
+            "\n",
+            "Complexity  RMSE  Expression\n",
+            "[0.0, 9.234604872781642e-07, '0.000000000000+x0']\n",
+            "Checking for brute force + \n",
+            "\n",
+            "Checking for brute force * \n",
+            "\n",
+            "Checking polyfit \n",
+            "\n",
+            "Complexity  RMSE  Expression\n",
+            "[0.0, 9.234604872781642e-07, '0.000000000000+x0']\n",
+            "Checking for brute force + \n",
+            "\n",
+            "Checking for brute force * \n",
+            "\n",
+            "Checking polyfit \n",
+            "\n",
+            "Complexity  RMSE  Expression\n",
+            "[0.0, 9.234604872781642e-07, '0.000000000000+x0']\n",
+            "Checking for brute force + \n",
+            "\n",
+            "Checking for brute force * \n",
+            "\n",
+            "Checking polyfit \n",
+            "\n",
+            "Complexity  RMSE  Expression\n",
+            "[0.0, 9.234604872781642e-07, '0.000000000000+x0']\n",
+            "Checking for brute force + \n",
+            "\n",
+            "Checking for brute force * \n",
+            "\n",
+            "Checking polyfit \n",
+            "\n",
+            "Complexity  RMSE  Expression\n",
+            "[0.0, 9.234604872781642e-07, '0.000000000000+x0']\n",
+            "Checking for brute force + \n",
+            "\n",
+            "Checking for brute force * \n",
+            "\n",
+            "Checking polyfit \n",
+            "\n",
+            "Complexity  RMSE  Expression\n",
+            "[0.0, 9.234604872781642e-07, '0.000000000000+x0']\n",
+            "Checking for symmetry \n",
+            " I.34.8_train-translated_multiply-translated_multiply-translated_divide\n",
+            "Just one variable!\n",
+            "I.34.8_train-translated_multiply-translated_multiply-translated_divide just one variable for ADD \n",
+            "\n",
+            "I.34.8_train-translated_multiply-translated_multiply-translated_divide just one variable for ADD \n",
+            "\n",
+            "I.34.8_train-translated_multiply-translated_multiply-translated_divide just one variable for ADD \n",
+            "\n",
+            "I.34.8_train-translated_multiply-translated_multiply-translated_divide just one variable for ADD \n",
+            "\n",
+            "I.34.8_train-translated_multiply-translated_multiply-translated_divide just one variable for ADD\n",
+            "I.34.8_train-translated_multiply-translated_multiply-translated_divide just one variable for ADD\n",
+            "########################################################################################################################\n",
+            "{'I.34.8': array([['0.0', '-20.046446431241375', '-20046446.431241374', '0.0',\n",
+            "        '9.234604872781642e-07', '0.000000000000+((x0*(x1*x2))/x3)'],\n",
+            "       ['nan', 'nan', 'nan', '16.194602975157967', 'nan',\n",
+            "        'acos(-x0 - x1 - x2 + 2)'],\n",
+            "       ['0.0', '-inf', '-inf', '16.509775004326936', '0.0',\n",
+            "        'x0*x1*x2/x3']], dtype='<U32')}\n",
+            "            Average error    Cumulative error    Error  Symbolic expression\n",
+            "--  ----  ---------------  ------------------  -------  ---------------------\n",
+            " 0  -inf             -inf             16.5098        0  x0*x1*x2/x3\n",
+            "CPU times: user 3h 57min 29s, sys: 23min 49s, total: 4h 21min 19s\n",
+            "Wall time: 4h 35min 21s\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<__main__.RunAll at 0x7f1bc8accb38>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 26
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DlQ6ydH8vVtU",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Problem: **I.34.8**\n",
+        "Took 4 hours and 35 minute to come up with the correct result:\n",
+        "$$\n",
+        "\\omega = \\dfrac{x_0 x_1 x_2}{x_3}\n",
+        "$$\n",
+        "And the correct answer is:\n",
+        "$$\n",
+        "\\omega = \\dfrac{qvB}{p}\n",
+        "$$\n"
       ]
     },
     {
@@ -1029,7 +1466,7 @@
         "colab_type": "text"
       },
       "source": [
-        "### Output sample"
+        "Output sample"
       ]
     },
     {
